src/test/ui/issues/issue-45696-scribble-on-boxed-borrow.ast.stderr
error: compilation successful
  --> $DIR/issue-45696-scribble-on-boxed-borrow.rs:82:1
   |
LL | / fn main() {
LL | |
LL | |     let mut x = 1;
LL | |     {
...  |
LL | |     *boxed_boxed_scribbled(Box::new(Box::new(Scribble(&mut x)))) += 10;
LL | | }
   | |_^

error: aborting due to previous error

